version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/ImportedLoads/ImportedLoadGroup.rst.txt
.. vale off



:class:`ImportedLoadGroup`
==========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedLoadGroup(internalObject: Any)

   Bases: :py:obj:`object`


   
   Defines a ImportedLoadGroup.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ImportedLoadGroup

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddImportedAeroacousticSource`
            - Creates a new ImportedAeroacousticSource
          * - :py:attr:`~AddImportedBodyForceDensity`
            - Creates a new ImportedBodyForceDensity
          * - :py:attr:`~AddImportedBodyTemperature`
            - Creates a new ImportedBodyTemperature
          * - :py:attr:`~AddImportedCFDPressure`
            - Creates a new Imported CFD Pressure object to map pressure loading read from a Fluent-Mechanical coupling data (.cgns) file.
          * - :py:attr:`~AddImportedConvection`
            - Creates a new ImportedConvection
          * - :py:attr:`~AddImportedCutBoundaryConstraint`
            - Creates a new ImportedDisplacement
          * - :py:attr:`~AddImportedCutBoundaryRemoteConstraint`
            - Creates a new ImportedCutBoundaryRemoteConstraint
          * - :py:attr:`~AddImportedCutBoundaryRemoteForce`
            - Creates a new ImportedCutBoundaryRemoteForce
          * - :py:attr:`~AddImportedDisplacement`
            - Creates a new ImportedDisplacement
          * - :py:attr:`~AddImportedElementOrientation`
            - Creates a new ImportedElementOrientation
          * - :py:attr:`~AddImportedFiberRatio`
            - Creates a new ImportedFiberRatio
          * - :py:attr:`~AddImportedForce`
            - Creates a new ImportedForce
          * - :py:attr:`~AddImportedHeatFlux`
            - Creates a new ImportedHeatFlux
          * - :py:attr:`~AddImportedHeatGeneration`
            - Creates a new ImportedHeatGeneration
          * - :py:attr:`~AddImportedInitialStrain`
            - Creates a new ImportedInitialStrain
          * - :py:attr:`~AddImportedInitialStress`
            - Creates a new ImportedInitialStress
          * - :py:attr:`~AddImportedMaterialField`
            - Creates a new ImportedMaterialField
          * - :py:attr:`~AddImportedPressure`
            - Creates a new ImportedPressure
          * - :py:attr:`~AddImportedSurfaceForceDensity`
            - Creates a new ImportedSurfaceForceDensity
          * - :py:attr:`~AddImportedTemperature`
            - Creates a new ImportedTemperature
          * - :py:attr:`~AddImportedThickness`
            - Creates a new ImportedThickness
          * - :py:attr:`~AddImportedTrace`
            - Creates a new ImportedTrace
          * - :py:attr:`~AddImportedVelocity`
            - Creates a new ImportedVelocity
          * - :py:attr:`~AddImportedWarpWeftRatio`
            - Creates a new ImportedWarpWeftRatio
          * - :py:attr:`~AddImportedYarnAngle`
            - Creates a new ImportedYarnAngle
          * - :py:attr:`~ClearGeneratedData`
            - Run the ClearGeneratedData action.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateBodyForceDensitiesAndSyncAnalysisSettings`
            - Create body force densities for all RPMs.
          * - :py:attr:`~CreateExternalLoadVelocitiesAndSyncAnalysisSettings`
            - Run the CreateExternalLoadVelocitiesAndSyncAnalysisSettings action.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~CreateSurfaceForceDensitiesAndSyncAnalysisSettings`
            - Create surface force densities for all RPMs.
          * - :py:attr:`~CreateVelocitiesAndSyncAnalysisSettings`
            - Create velocities for all RPMs.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetDetailsView`
            - GetDetailsView method.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetExternalDataFiles`
            - Gets a copy of the most recently imported ExternalDataFileCollection.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~ImportExternalDataFiles`
            - Imports external data files for current Imported Load Group.
          * - :py:attr:`~ImportLoad`
            - Run the ImportLoad action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RefreshImportedLoad`
            - Run the RefreshImportedLoad action.
          * - :py:attr:`~ReloadExternalDataFiles`
            - Reloads the external data files for current Imported Load Group.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~SetResultFile`
            - Sets the ResultFile with unitSystem supplied. For MAPDL Results File without a unit system.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AttachedRefs`
            - AttachedRefs property.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ClsId`
            - ClsId property.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DeleteMappedDataFilesAfterImport`
            - Gets or sets the DeleteMappedDataFilesAfterImport.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FilesDirectory`
            - Gets the FilesDirectory.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ResultFile`
            - Gets or sets the ResultFile.
          * - :py:attr:`~ResultFileTimestamp`
            - Gets the ResultFileTimestamp.
          * - :py:attr:`~ResultFileUnitSystem`
            - Gets or sets the ResultFileUnitSystem.
          * - :py:attr:`~Source`
            - Gets the Source.
          * - :py:attr:`~SourceDimension`
            - Gets or sets the SourceDimension.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TransferStep`
            - Controls which additive simulation step is used for the data transfer.
          * - :py:attr:`~TransferTemperaturesDuringSolve`
            - Gets or sets the TransferTemperaturesDuringSolve.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: AttachedRefs
   :type: Optional[List[int]]


   
   AttachedRefs property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ClsId
   :type: Optional[int]


   
   ClsId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteMappedDataFilesAfterImport
   :type: Optional[bool]


   
   Gets or sets the DeleteMappedDataFilesAfterImport.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FilesDirectory
   :type: Optional[str]


   
   Gets the FilesDirectory.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSExternalLoadGroupAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultFile
   :type: Optional[str]


   
   Gets or sets the ResultFile.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultFileTimestamp
   :type: Optional[str]


   
   Gets the ResultFileTimestamp.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultFileUnitSystem
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WBUnitSystemType]


   
   Gets or sets the ResultFileUnitSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: Source
   :type: Optional[str]


   
   Gets the Source.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceDimension
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SourceDimension]


   
   Gets or sets the SourceDimension.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferStep
   :type: Optional[int]


   
   Controls which additive simulation step is used for the data transfer.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferTemperaturesDuringSolve
   :type: Optional[bool]


   
   Gets or sets the TransferTemperaturesDuringSolve.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddImportedAeroacousticSource() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedAeroacousticSource

   
   Creates a new ImportedAeroacousticSource

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedBodyForceDensity() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedBodyForceDensity

   
   Creates a new ImportedBodyForceDensity

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedBodyTemperature() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedBodyTemperature

   
   Creates a new ImportedBodyTemperature

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedCFDPressure() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedPressure

   
   Creates a new Imported CFD Pressure object to map pressure loading read from a Fluent-Mechanical coupling data (.cgns) file.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedConvection() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedConvection

   
   Creates a new ImportedConvection

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedCutBoundaryConstraint() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedDisplacement

   
   Creates a new ImportedDisplacement

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedCutBoundaryRemoteConstraint() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedCutBoundaryRemoteConstraint

   
   Creates a new ImportedCutBoundaryRemoteConstraint

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedCutBoundaryRemoteForce() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedCutBoundaryRemoteForce

   
   Creates a new ImportedCutBoundaryRemoteForce

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedDisplacement() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedDisplacement

   
   Creates a new ImportedDisplacement

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedElementOrientation() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedElementOrientation

   
   Creates a new ImportedElementOrientation

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedFiberRatio() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedFiberRatio

   
   Creates a new ImportedFiberRatio

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedForce() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedForce

   
   Creates a new ImportedForce

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedHeatFlux() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedHeatFlux

   
   Creates a new ImportedHeatFlux

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedHeatGeneration() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedHeatGeneration

   
   Creates a new ImportedHeatGeneration

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedInitialStrain() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedInitialStrain

   
   Creates a new ImportedInitialStrain

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedInitialStress() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedInitialStress

   
   Creates a new ImportedInitialStress

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedMaterialField() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedMaterialField

   
   Creates a new ImportedMaterialField

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedPressure() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedPressure

   
   Creates a new ImportedPressure

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedSurfaceForceDensity() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedSurfaceForceDensity

   
   Creates a new ImportedSurfaceForceDensity

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedTemperature() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedTemperature

   
   Creates a new ImportedTemperature

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedThickness() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedThickness

   
   Creates a new ImportedThickness

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedTrace() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedTrace

   
   Creates a new ImportedTrace

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedVelocity() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedVelocity

   
   Creates a new ImportedVelocity

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedWarpWeftRatio() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedWarpWeftRatio

   
   Creates a new ImportedWarpWeftRatio

   ..
       !! processed by numpydoc !!

.. py:method:: AddImportedYarnAngle() -> Ansys.ACT.Automation.Mechanical.ImportedLoads.ImportedYarnAngle

   
   Creates a new ImportedYarnAngle

   ..
       !! processed by numpydoc !!

.. py:method:: ClearGeneratedData() -> None

   
   Run the ClearGeneratedData action.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateBodyForceDensitiesAndSyncAnalysisSettings() -> None

   
   Create body force densities for all RPMs.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateExternalLoadVelocitiesAndSyncAnalysisSettings() -> None

   
   Run the CreateExternalLoadVelocitiesAndSyncAnalysisSettings action.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateSurfaceForceDensitiesAndSyncAnalysisSettings() -> None

   
   Create surface force densities for all RPMs.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateVelocitiesAndSyncAnalysisSettings() -> None

   
   Create velocities for all RPMs.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDetailsView() -> Ansys.ACT.Automation.Mechanical.DetailsViewData

   
   GetDetailsView method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetExternalDataFiles() -> Ansys.Mechanical.ExternalData.ExternalDataFileCollection

.. code-block:: text

   Gets a copy of the most recently imported ExternalDataFileCollection. 
   >

   Returns an empty Collection if an ImportExternalData operation has never been done.
   >
..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: ImportExternalDataFiles(externalDataFiles: Ansys.Mechanical.ExternalData.ExternalDataFileCollection) -> None

.. code-block:: text

   Imports external data files for current Imported Load Group.

   This includes saving the external data files to project if specified, generating the XML representation 
   of the external data settings, and updating the file association for mapping.

   An ExternalDataFileCollection object can be created by calling the GetSettingsForFormat 
   method from the factory class . 
..
       !! processed by numpydoc !!

.. py:method:: ImportLoad() -> None

   
   Run the ImportLoad action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RefreshImportedLoad() -> None

   
   Run the RefreshImportedLoad action.

   ..
       !! processed by numpydoc !!

.. py:method:: ReloadExternalDataFiles() -> None

   
   Reloads the external data files for current Imported Load Group.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: SetResultFile(resultFile: str, unitSystem: Ansys.Mechanical.DataModel.Enums.WBUnitSystemType) -> None

   
   Sets the ResultFile with unitSystem supplied. For MAPDL Results File without a unit system.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on